--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_combine_text">%s - %s</string>
     <string name="pub_date">출시 : %s</string>
     <string name="user_rating">평점 : %s</string>
+    <string name="empty_string">Result not Found</string>
 </resources>
